<resources>
    <string name="app_name">同兴支付</string>

    <!--login登陆-->
    <string name="login_username_hint">请输入用户名</string>
    <string name="login_password_hint">请输入密码</string>
    <string name="login_remember_password">记住密码</string>
    <string name="login_forget_password">忘记密码</string>
    <string name="login_label_signin">登陆</string>
    <string name="login_network_setting">网络设置</string>
    <string name="login_server_telphone">服务热线：028-5261268</string>

    <!--刷新refresh-->
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="pullup_to_load">上拉加载更多</string>
    <string name="release_to_load">释放立即加载</string>
    <string name="loading">正在加载...</string>
    <string name="load_succeed">加载成功</string>
    <string name="load_fail">加载失败</string>

    <string name="load_more">正在加载更多...</string>
    <string name="load_finished">加载完成!</string>
    <string name="listview_header_hint_normal">下拉刷新</string>
    <string name="listview_header_hint_release">释放立即刷新</string>
    <string name="listview_loading">正在加载</string>
    <string name="nomore_loading">没有了</string>
    <string name="refresh_done">刷新完成</string>
    <string name="listview_header_last_time">上次更新时间：</string>


    <!--<string name="xlistview_header_hint_normal">下拉刷新</string>-->
    <!--<string name="xlistview_header_hint_ready">释放立即刷新</string>-->
    <!--<string name="xlistview_header_hint_loading">正在刷新...</string>-->
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <!--<string name="xlistview_footer_hint_normal">查看更多</string>-->
    <!--<string name="xlistview_footer_hint_ready">松开载入更多</string>-->


    <!--Home主界面-->
    <string name="text_home_account">账单</string>
    <string name="text_home_collection">当日收款(元)</string>
    <string name="text_home_weixin">微信</string>
    <string name="text_home_alipay">支付宝</string>
    <string name="text_home_yizf">翼支付</string>
    <string name="text_home_union">刷卡支付</string>
    <string name="text_home_baidu">百度钱包</string>
    <string name="text_home_pos">POS</string>
    <string name="text_home_collections">收款</string>
    <string name="text_home_message">消息</string>
    <string name="text_home_myself">我的</string>
    <string name="text_original_monty">0.00</string>
    <string name="text_original_monty2">0</string>


    <string name="text_pay_moneySign">¥</string>


    <string name="text_getCerCode">获取验证码</string>

    <!--product二维码生成-->
    <string name="text_scan_weixin">请打开微信扫一扫</string>
    <string name="text_scan_alipay">请打开支付宝扫一扫</string>
    <string name="text_scan_yzf">请打开翼支付扫一扫</string>
    <string name="text_scan_baidu">请打开百度钱包扫一扫</string>


    <string name="default_pull_refresh_text">下拉刷新</string>
    <string name="default_pull_load_text">上拉加载更多</string>
    <string name="refresh_text">正在刷新</string>
    <string name="load_text">正在加载</string>

    <string name="url_server">http://192.168.1.99/version.xml</string>

    <!--扫码界面-->
    <string name="text_scan_title">收款</string>
    <string name="text_scan_text">收款金额： ¥1233.22</string>


    <!--bluetooth 蓝牙设置-->
    <string name="select_device">选择连接的设备</string>
    <string name="no_bluetooth">蓝牙未开启</string>
    <string name="none_paired">没有匹配的设备</string>
    <string name="none_found">没有找到设备</string>
    <string name="not_connected">请先连接蓝牙打印机</string>
    <string name="title_paired_devices">已匹配设备</string>
    <string name="title_other_devices">其它可用设备</string>
    <string name="button_scan">扫描设备</string>


    <!--Toast 提示-->
    <string name="toast_no_network">无网络连接,请检查!</string>

    <string name="my_version_name">版本号</string>
    <string name="my_version_state">已是最新版</string>
    <string name="my_version_new">当前最新版本</string>
</resources>
