<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/main_home_bg"
              android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="88px"
        >

        <ImageView
            android:id="@+id/titles"
            style="@style/layout_common2"
            android:layout_centerInParent="true"
            android:src="@drawable/main_icon_logo"/>

        <ImageView
            android:layout_width="88px"
            android:layout_height="88px"
            android:id="@+id/ibtn_home_analyse"
            style="@style/layout_common2"
            android:layout_alignParentRight="true"
            android:scaleType="centerInside"
            android:src="@drawable/main_icon_analyse"/>
    </RelativeLayout>
    <LinearLayout
        android:fitsSystemWindows="true"
        android:layout_weight="1.2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/ll_home_top"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </LinearLayout>


        <TextView
            android:id="@+id/tv_home_amount"
            style="@style/home_text2"
            android:layout_width="match_parent"
            android:layout_marginTop="40px"
            android:gravity="center"
            android:text="0.00"
            android:textSize="50px"
            />

        <TextView
            android:textSize="36px"
            style="@style/home_text1"
            android:layout_width="match_parent"
            android:layout_below="@id/tv_home_amount"
            android:layout_marginTop="25px"
            android:gravity="center"
            android:text="@string/text_home_collection"
            />

        <LinearLayout
            style="@style/layout_common1"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="50px"
            android:orientation="horizontal">

            <LinearLayout
                style="@style/layout_common2"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    style="@style/home_text1"
                    android:text="@string/text_home_weixin"
                    />

                <TextView
                    android:id="@+id/tv_home_weixin"
                    style="@style/home_text1"
                    android:layout_marginTop="@dimen/view_padding5"
                    android:text="@string/text_original_monty"
                    />

            </LinearLayout>

            <View
                android:layout_gravity="center_vertical"
                android:layout_height="53px"
                style="@style/stroke"
                android:layout_width="1px"
                />

            <LinearLayout
                style="@style/layout_common2"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    style="@style/home_text1"
                    android:text="@string/text_home_alipay"
                    />

                <TextView
                    android:id="@+id/tv_home_alipay"
                    style="@style/home_text1"
                    android:layout_marginTop="@dimen/view_padding5"
                    android:text="@string/text_original_monty"
                    />
            </LinearLayout>

            <View
                android:layout_gravity="center_vertical"
                android:layout_height="53px"
                style="@style/stroke"
                android:layout_width="1px"
                />

            <LinearLayout
                style="@style/layout_common2"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    style="@style/home_text1"
                    android:text="@string/text_home_yizf"
                    />

                <TextView
                    android:id="@+id/tv_home_yzf"
                    style="@style/home_text1"
                    android:layout_marginTop="@dimen/view_padding5"
                    android:text="@string/text_original_monty"
                    />
            </LinearLayout>

            <View
                android:layout_gravity="center_vertical"
                android:layout_height="53px"
                style="@style/stroke"
                android:layout_width="1px"
                />

            <LinearLayout
                style="@style/layout_common2"
                android:layout_weight="0.5"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    style="@style/home_text1"
                    android:text="@string/text_home_baidu"
                    />

                <TextView
                    android:id="@+id/tv_home_badiu"
                    style="@style/home_text1"
                    android:layout_marginTop="@dimen/view_padding5"
                    android:text="@string/text_original_monty"
                    />
            </LinearLayout>

            <!--<View-->
            <!--android:layout_gravity="center_vertical"-->
            <!--android:layout_height="53px"-->
            <!--style="@style/stroke"-->
            <!--android:layout_width="1px"-->
            <!--/>-->
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:background="@color/text_scan_amount"
            android:layout_width="match_parent"
            android:layout_height="2px"/>
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/iv_home_weixn"
                style="@style/layout_calculator"
                android:clickable="true"
                android:src="@drawable/selector_home_weichat"
                />
            <TextView
                android:background="@color/text_scan_amount"
                android:layout_width="2px"
                android:layout_height="match_parent"/>
            <ImageView

                android:id="@+id/iv_home_alipay"
                style="@style/layout_calculator"
                android:clickable="true"
                android:src="@drawable/selector_home_alipay"
                />

        </LinearLayout>
        <TextView
            android:background="@color/text_scan_amount"
            android:layout_width="match_parent"
            android:layout_height="2px"/>
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:layout_weight="1"
                android:id="@+id/iv_home_yzf"
                style="@style/layout_calculator"
                android:clickable="true"
                android:src="@drawable/selector_home_yzf"
                />
            <TextView
                android:background="@color/text_scan_amount"
                android:layout_width="2px"
                android:layout_height="match_parent"/>

            <ImageView
                android:layout_weight="1"
                android:id="@+id/iv_home_baidu"
                style="@style/layout_calculator"
                android:clickable="true"
                android:src="@drawable/selector_home_baidu"/>
        </LinearLayout>
        <!--<TableLayout-->
        <!--style="@style/layout_common1"-->
        <!--android:layout_weight="1"-->
        <!-->-->

        <!--<TableRow-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_weight="1"-->
        <!-->-->

        <!--<ImageView-->
        <!--android:id="@+id/iv_home_weixn"-->
        <!--style="@style/layout_calculator"-->
        <!--android:layout_weight="1"-->
        <!--android:clickable="true"-->
        <!--android:src="@drawable/home_icon_weixin"-->
        <!--/>-->
        <!-- -->
        <!--<ImageView-->
        <!--android:layout_marginLeft="2px"-->
        <!--android:id="@+id/iv_home_alipay"-->
        <!--style="@style/layout_calculator"-->
        <!--android:layout_weight="1"-->
        <!--android:clickable="true"-->
        <!--android:src="@drawable/home_icon_zhifubao"-->
        <!--/>-->
        <!--</TableRow>-->

        <!--<TableRow-->
        <!--android:layout_marginTop="2px"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_weight="1"-->
        <!-->-->

        <!--<ImageView-->
        <!--android:id="@+id/iv_home_yzf"-->
        <!--style="@style/layout_calculator"-->
        <!--android:layout_weight="1"-->
        <!--android:clickable="true"-->
        <!--android:src="@drawable/home_icon_yizf"-->
        <!--/>-->

        <!--<ImageView-->
        <!--android:layout_marginLeft="2px"-->
        <!--android:id="@+id/iv_home_baidu"-->
        <!--style="@style/layout_calculator"-->
        <!--android:layout_weight="1"-->
        <!--android:clickable="true"-->
        <!--android:src="@drawable/home_icon_baidupay"/>-->
        <!--</TableRow>-->
        <!--</TableLayout>-->
    </LinearLayout>


</LinearLayout>
